web/themes/gavias_colin/css/newheader.css
.slideshow_content.area {
    position: relative;
    top: 0 !important;
    margin-top: -38px !important;
    z-index: 1 !important;
}

.quick-side-icon .icon {
    font-size: 20px;
}

.quick-side-icon {
    position: absolute;
    z-index: 1;
    right: 10px !important;
    top: 2px !important;
    margin-top: 0 !important;
}

.quick-side-icon .icon a,
.quick-side-icon .icon a:link {
    line-height: 1.4;
    color: var(--mha-white);
    font-weight: 400 !important;
    text-decoration: none;
    font-family: 'Montserrat', sans-serif !important;
    border: 1px solid var(--mha-orange);
    background: var(--mha-orange);
    padding: 2px 7px;
    border-radius: 0;
}

.quick-side-icon .icon a:hover {
    border: 1px solid var(--mha-navy);
    background: var(--mha-navy);
    border-radius: 50%;
}

header.header-default .header-main {
    padding: .75rem 0 !important;
}

header.header-default .main-menu {
    margin: .5rem 0 .5rem 0 !important;
}

.site-branding-logo img {
    max-height: 60px !important;
}

#block-topmenu .gva_menu {
    background: transparent !important;
}

ul.sf-menu.sf-horizontal ul,
ul.sf-menu.sf-vertical ul,
ul.sf-menu.sf-navbar ul ul {
    border-radius: 0;
    padding: 0 1rem 2rem 1rem;
}

.sf-depth-2 a {
    line-height: 1.1;
    margin-bottom: .75rem !important;
    padding: 0 10px 0 0 !important;
}

/* Search */
.gva-search-region {
    margin-top: -2px !important;
    right: 0 !important;
    text-decoration: none !important;
}

#block-searchform {
    float: right !important;
}

input[type="submit"],
#edit-wizard-prev {
    height: 25px;
    line-height: 0;
    padding: 0 .75rem;
    background: var(--mha-blue);
    color: var(--mha-white);
    font-size: 12px;
    width: auto;
    border: none !important;
    box-shadow: none !important;
    border-radius: 20px;
    font-weight: 400;
}

input[type="submit"]:hover,
#edit-wizard-prev:hover {
    background: var(--mha-orange);
}

div#edit-actions {
    margin: 0;
}

.form-search {
    margin: 1rem 0 0;
}

#edit-keys {
    border: 1px solid var(--mha-light-grey);
    padding: 2px;
    margin: 0 0 1rem;
    font-size: .8rem;
}

.gva-search-region .search-content form.search-block-form input#edit-keys {
    width: 11rem !important;
}

/* SuperFish */
ul.sf-menu.sf-style-default {
    float: left;
    margin-bottom: .25rem;
    padding: 0;
}

#superfish-main a {
    font-size: 12px !important;
}

#superfish-main li:nth-child(1) a.sf-depth-1 {
    background: var(--mha-white) fff !important;
    color: var(--mha-blue) !important;
    border: none !important;
    border-right-color: currentcolor;
    border-right: 1px solid var(--mha-orange-bright) !important;
    margin-top: 2px;
    padding: 1px 20px 1px 0 !important;
    border-radius: 0 !important;
}

#superfish-main li:nth-child(1) a.sf-depth-1,
#superfish-main li:nth-child(2) a.sf-depth-1,
#superfish-main li:nth-child(3) a.sf-depth-1,
#superfish-main li:nth-child(4) a.sf-depth-1 {
    background: var(--mha-white) fff !important;
    color: var(--mha-blue) !important;
    border: none !important;
    border-right-color: inherit;
    border-right: 1px solid var(--mha-orange-bright) !important;
    margin-top: 4px;
    padding: 1px 20px 1px 0 !important;
    border-radius: 0 !important;
}

#superfish-main li:nth-child(1) a.sf-depth-1::after,
#superfish-main li:nth-child(2) a.sf-depth-1::after,
#superfish-main li:nth-child(3) a.sf-depth-1::after,
#superfish-main li:nth-child(4) a.sf-depth-1::after {
    content: '\f078';
    color: #d0d0d0 !important;
    display: inline-block;
    font-size: inherit;
    font-family: 'FontAwesome';
    margin: 0 0 0 5px;
    text-rendering: auto;
}

#superfish-main li:nth-child(1) a.sf-depth-1:hover::after,
#superfish-main li:nth-child(2) a.sf-depth-1:hover::after,
#superfish-main li:nth-child(3) a.sf-depth-1:hover::after,
#superfish-main li:nth-child(4) a.sf-depth-1:hover::after {
    color: var(--mha-orange) !important;
    font-family: "FontAwesome";
    content: '\f077';
}

#superfish-main li:nth-child(4) a.sf-depth-1 {
    border-right: none !important;
}

#superfish-main li:nth-child(5) a.sf-depth-1,
#superfish-main li:nth-child(6) a.sf-depth-1 {
    padding: 6px 20px !important
}

#superfish-main li:nth-child(5) a.sf-depth-1 {
    background: #385878 !important;
    border-radius: 15px !important;
    font-size: 10px !important;
}

#superfish-main li:nth-child(6) a.sf-depth-1 {
    color: var(--mha-white);
    background: var(--mha-lime) !important;
    border-radius: 15px !important;
    font-size: 10px !important;
}

#superfish-main li:nth-child(5) a.sf-depth-1::before {
    content: '\f256';
    display: inline-block;
    font-size: inherit;
    font-family: 'FontAwesome';
    margin: 0 7px 0 0;
    text-rendering: auto;
}

#superfish-main li:nth-child(6) a.sf-depth-1::before {
    content: '\f004';
    display: inline-block;
    font-size: inherit;
    font-family: 'FontAwesome';
    margin: 0 7px 0 0;
    text-rendering: auto;
}

#superfish-main li:nth-child(1) a.sf-depth-1:hover,
#superfish-main li:nth-child(2) a.sf-depth-1:hover,
#superfish-main li:nth-child(3) a.sf-depth-1:hover,
#superfish-main li:nth-child(4) a.sf-depth-1:hover,
#superfish-main li:nth-child(5) a.sf-depth-1:hover,
#superfish-main li:nth-child(6) a.sf-depth-1:hover,
#superfish-main li:nth-child(7) a.sf-depth-1:hover,
#superfish-main li:nth-child(8) a.sf-depth-1:hover {
    box-shadow: none;
    border-radius: 0 !important;
}


#superfish-main li:nth-child(1) a.sf-depth-1:hover,
#superfish-main li:nth-child(2) a.sf-depth-1:hover,
#superfish-main li:nth-child(3) a.sf-depth-1:hover,
#superfish-main li:nth-child(4) a.sf-depth-1:hover {
    color: var(--mha-orange) !important;
    text-decoration: none;
    background: var(--mha-white) fff !important;
}

#superfish-main a {
    padding: 0 20px 0 0 !important;
    margin: 0 20px 0 0;
}

#superfish-main a:hover,
#superfish-main a:active {
    color: var(--mha-orange) !important;
    background: white !important;
    text-decoration: none !important;
    border-radius: 0 !important;
}

ul.sf-menu.sf-horizontal ul li {
    color: var(--mha-orange) !important;
}

.sf-multicolumn-wrapper {
    padding: 1rem 0 0 !important;
}

.breadcrumb-content-inner .breadcrumb-content-main {
    position: relative;
    z-index: 9;
    margin: 10px 0 0;
}

/*
.right-header .navigation .gva_menu {
  float: left !important;
  top: 0;
  position: absolute;
  display: inline-flex;
}

.right-header .navigation {
  position: absolute !important;
  clear: both;
}
*/
.col-md-9.col-sm-8.col-xs-8.right-header {
    margin: 4px 0 0;
}

.right-header .gva_menu > li > a, .right-header .navigation .gva_menu > li > a {
    color: var(--mha-navy) !important;
    font-size: 12px !important;
    font-weight: 600 !important;
    letter-spacing: 0 !important;
    text-transform: initial !important;
    padding: 4px 10px !important;
    margin: 0 1px 0;
    background: transparent;
    width: max-content;
    border-radius: 25px;
}

.right-header .gva_menu > li > a:hover,
.right-header .navigation .gva_menu > li > a:hover {
    background: transparent !important;
    color: var(--mha-orange) !important;
}

.right-header .gva_menu {
    background: transparent;
}

/* TopBar */

.topbar {
    background: var(--mha-blue) !important;
    color: var(--mha-black) !important;
    font-size: inherit;
    padding: 0.35rem 0 !important;
    margin-top: 0 !important;
}

.topbar .navigation .gva_menu {
    float: right;
    background: transparent !important;
}

.topbar ul li {
    line-height: 0;
    margin: 0;
}

.topbar .navigation .gva_menu > li > a {
    color: var(--mha-white) !important;
    font-size: 12px !important;
    font-weight: 600 !important;
    padding: 0 !important;
    margin: 0 .75rem !important;
    text-transform: initial !important;
    text-decoration: none !important;
    border-radius: 0;
    letter-spacing: 0 !important;
}

.topbar .navigation .gva_menu > li > a:hover {
    color: var(--mha-lime-bright) !important;
}

.topbar .navigation .gva_menu > li:last-child > a:before {
    content: '\f07a';
    display: inline-block;
    font-size: inherit;
    font-family: 'FontAwesome';
    margin: 0 5px 0 0;
    text-rendering: auto;
    color: var(--mha-lime-bright) !important;
}

.topbar .tele a,
.topbar .tele a:link {
    line-height: 1.1;
    color: var(--mha-white) !important;
}

.topbar .tele a:hover {
    color: var(--mha-lime-bright) !important;
}

.topbar i.fa.fa-phone.mr-2 {
    font-size: 13px !important;
}

.stuck ul.sf-menu.sf-style-default li,
.stuck ul.sf-menu.sf-style-default.sf-navbar {
    margin-bottom: 10px !important;
}

ul.sf-menu.sf-horizontal ul {
    border-bottom: 5px solid var(--mha-navy) !important;
    box-shadow: 0 2px 15px 3px rgba(0, 0, 0, 0.15) !important;
    -webkit-box-shadow: 0 2px 15px 3px rgba(0, 0, 0, 0.15) !important;
    -moz-box-shadow: 0 2px 15px 3px rgba(0, 0, 0, 0.15) !important;
}

.breadcrumb-content-inner .gva-breadcrumb-content .page-title {
    background: 0 0;
    position: relative;
    margin: 0 0 2rem;
    padding: 0 0 8px;
    font-size: 2.2rem;
    font-weight: 600;
    color: var(--mha-navy);
    font-family: din-2014, sans-serif;
    line-height: 1.01;
}

.breadcrumb-content-inner .gva-breadcrumb-content .page-title:after {
    content: '';
    position: absolute;
    width: 50px;
    height: 3px;
    background: var(--mha-orange);
    left: 0;
    bottom: 0;
    z-index: 1;
}

.sidebar .block .block-title, .sidebar .block-menu ul li span {
    border-radius: 2px;
}

.sidebar .block .block-title::before {
    position: absolute;
    left: -10px;
    color: var(--mha-orange);
}

.sidebar .block .block-title, .sidebar .block-menu ul li span {
    font-size: 14px;
    margin: 0;
    background: transparent;
    color: var(--mha-orange) !important;
}

.sidebar.sidebar-left {
    margin: 0 !important;
}

.btn.btn-primary, a.btn.btn-primary {
    padding: 5px 20px !important;
    margin: 10px 2px 10px !important;
}

.gva-search-region .search-content {
    background: rgba(255, 255, 255, 0.0) !important;
    padding: 25px 20px 0 20px !important;
    box-shadow: none !important;
    border: none !important
}

.gva-search-region .search-content form.search-block-form input#edit-keys {
    background: rgba(255, 255, 255, 1) !important;
}

@media (max-width: 991px) {
    ul.sf-menu.sf-style-default li,
    ul.sf-menu.sf-style-default.sf-navbar {
        background: var(--mha-white) !important;
    }

    ul.sf-menu.sf-style-default a, ul.sf-menu.sf-style-default a.sf-with-ul {
        color: var(--mha-black);
        text-decoration: none;
        text-transform: uppercase;
        font-size: 12px;
    }

    .gva-search-region {
        position: absolute !important;
        right: 60px !important;
        margin-top: -45px !important;
        z-index: 9 !important;
    }

    .gbb-row .bb-inner.remove_padding_col > .bb-container > .row > .row-wrapper > div.gsc-column.image-button {
        margin: 10px;
    }

    .block-menu.navigation ul li {
        display: inline-flex !important;
        list-style: none;
    }

    .topbar .container {
        width: 100% !important;
    }
}

